[package]
name = "lamellar_lsbsort"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
rand_pcg = { version = "0.9.0" }
lamellar = { version = "0.7.1"} #add features = ["enable-rofi"] to use rofi lamellae
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.7"
rayon = "1.10.0"

